# jaunt

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  package.json
.claude/agent-memory/harness-architect/: MEMORY.md  project_remaining_issues.md  project_session_resume_plan.md
.claude/agent-memory/harness-debugger/: MEMORY.md  feedback_solidjs_store_patterns.md
.claude/agent-memory/harness-researcher/: MEMORY.md  project_cairn_cicd.md  project_cairn_rs_api.md  project_cairn_structure.md  project_cairn_wiring_architecture.md  project_jaunt_overview.md  project_snag_cargo_issue.md  project_snag_current_state.md  project_snag_protocol.md
.github/workflows/: build.yml  pr.yml  release.yml  tag-release.yml  tauri-release.yml  web.yml
.plans/: final-gaps.md  remaining-issues.md
.test-config-workspace/jaunt/: devices.json
.test-config/jaunt/: devices.json
crates/jaunt-client/: Cargo.toml
crates/jaunt-client/src/: commands.rs  config.rs  main.rs
crates/jaunt-host/: Cargo.toml
crates/jaunt-host/src/: approval.rs  config.rs  files.rs  main.rs  node.rs  pairing_server.rs  pid.rs  profile.rs  snag.rs  ws.rs
crates/jaunt-protocol/: Cargo.toml
crates/jaunt-protocol/src/: lib.rs  messages.rs  profile.rs
docs/: jaunt-prd.md  jaunt-tech-spec.md
packaging/arch/: PKGBUILD
packaging/systemd/: jaunt-host.service
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: cairn_bridge.rs  lib.rs  main.rs
tauri/src-tauri/src/src/: cairn_bridge.rs  lib.rs
tests/: e2e-full.mjs  e2e-reconnect.mjs  e2e-session-attach.mjs  e2e-transport.mjs  e2e-workspace-v2.mjs  e2e-workspace.mjs
web/: index.html  package-lock.json  package.json  test-reconnect.mjs  test-seed.mjs  tsconfig.json  uno.config.ts  vite.config.ts
web/public/: manifest.json
web/src/: App.tsx  index.tsx
web/src/components/: FileBrowser.tsx  HostSwitcher.tsx  MobileKeys.tsx  PairingScreen.tsx  PaneContainer.tsx  SessionList.tsx  SessionPicker.tsx  Settings.tsx  StatusBar.tsx  TabBar.tsx  Terminal.tsx  TerminalPane.tsx  TerminalWorkspace.tsx
web/src/lib/: cairn.ts  hooks.ts  profile.ts  protocol.ts  store.ts
