[package]
name = "jaunt-client"
version = "0.9.2"
edition = "2021"
description = "Jaunt CLI client — connect to remote hosts via cairn P2P"
license = "MIT"

[[bin]]
name = "jaunt-client"
path = "src/main.rs"

[dependencies]
jaunt-protocol = { path = "../jaunt-protocol" }
cairn-p2p = { path = "../../../cairn/packages/rs/cairn-p2p" }
tokio = { version = "1", features = ["rt", "macros", "signal", "sync", "time", "io-util", "io-std"] }
crossterm = { version = "0.28", features = ["event-stream"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
toml = "0.8"
