[package]
name = "jaunt-tauri"
version = "0.1.0"
edition = "2021"
description = "Jaunt native app — access your machine from any device"
license = "MIT"

[lib]
name = "jaunt_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
cairn-p2p = { git = "https://github.com/moukrea/cairn.git", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
jaunt-protocol = { path = "../../crates/jaunt-protocol" }
